--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 	
-	<title>Home</title>
+	<title>{{ page.title }}</title>
 	 <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -15,30 +15,8 @@
 
 </head>
 <body>
-	<ul class="nav nav-pills">
-	<li role="presentation" class="active"><a href="/">Who we are</a></li>
-	<li role="presentation" ><a href="/whatwedo">What we do</a></li>
-	<li role="presentation" ><a href="/howwework">How we work</a></li>
-	<li role="presentation" ><a href="/portfolio">Portfolio</a></li>
-	<li role="presentation" ><a href="/contact">Contact us</a></li>
-</ul>
-
-	<ul>
-	
-	<li>
-		<a href="/2014/12/27/test.html">My first blog</a>
-	</li>
-	
-</ul>
-
-	<div>
-	===================================
-</div>
-<div>
-footer
-contact
-copyright: DUCBUI
-</div>
-
+	{% include nav_links.html %}
+	{{ content }}
+	{% include footer.html %}
 </body>
 </html>
