--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,7 @@
-<div>
-	===================================
-</div>
-<div>
-footer
-contact
-copyright: DUCBUI
-</div>
+<footer class="footer">
+<div class="container">
+	<p class="text-muted">
+Copyright: DUCBUI 2015
+	</p>
+	</div>
+</footer>
