--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,9 +12,9 @@
         ga('send', 'pageview');
        </script>
        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-
+       <link rel="stylesheet" href="/css/sticky-footer-navbar.css">
 </head>
-<body>
+<body style="padding-top: 70px;">
 	{% include nav_links.html %}
 	{{ content }}
 	{% include footer.html %}
