--- a/_includes/nav_links.html
+++ b/_includes/nav_links.html
@@ -1,7 +1,16 @@
-<ul class="nav nav-pills">
-	<li role="presentation" class="active"><a href="/">Who we are</a></li>
-	<li role="presentation" ><a href="/whatwedo">What we do</a></li>
-	<li role="presentation" ><a href="/howwework">How we work</a></li>
-	<li role="presentation" ><a href="/portfolio">Portfolio</a></li>
-	<li role="presentation" ><a href="/contact">Contact us</a></li>
-</ul>
+<nav class="navbar navbar-default navbar-fixed-top">
+<div class="container-fluid">
+	<div class="navbar-header">
+		<a class="navbar-brand" href="/">Yellow & Blue</a>
+	</div>
+	<div class="collapse navbar-collapse">
+		<ul class="nav nav-pills navbar-right">
+			<li role="presentation" class="active"><a href="/">Who we are</a></li>
+			<li role="presentation" ><a href="/whatwedo">What we do</a></li>
+			<li role="presentation" ><a href="/howwework">How we work</a></li>
+			<li role="presentation" ><a href="/portfolio">Portfolio</a></li>
+			<li role="presentation" ><a href="/contact">Contact us</a></li>
+		</ul>
+	</div><!-- end of navbar-collapse -->
+</div><!-- end of container-fluid -->
+</nav>
