--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
-<div class="container">
-	<p class="text-muted">
-Copyright: DUCBUI 2015
-	</p>
+	<div class="container">
+		<p class="text-muted">
+			Copyright: DUCBUI 2015
+		</p><!-- TODO: add fb, linkedin here-->
 	</div>
 </footer>
