--- a/_includes/nav_links.html
+++ b/_includes/nav_links.html
@@ -17,6 +17,10 @@
 			<li role="presentation" class={% if page.url == '/portfolio/index.html' %}"active"{% endif %} >
 				<a href="/portfolio">Portfolio</a>
 			</li>
+			<li role="presentation" class={% if page.url == '/blog/index.html' %}"active"{% endif %} >
+				<a href="/blog">Blog</a>
+			</li>
+
 			<li role="presentation" class={% if page.url == '/contact/index.html' %}"active"{% endif %} >
 				<a href="/contact">Contact us</a>
 			</li>
