--- a/_includes/nav_links.html
+++ b/_includes/nav_links.html
@@ -5,11 +5,11 @@
 	</div>
 	<div class="collapse navbar-collapse">
 		<ul class="nav nav-pills navbar-right">
-			<li role="presentation" class={% if page.url == '/index.html' %}"active"{% endif %} >
+			<!--<li role="presentation" class={% if page.url == '/index.html' %}"active"{% endif %} >
 				<a href="/">Who we are</a>
-			</li>
-			<li role="presentation" class={% if page.url == '/whatwedo/index.html' %}"active"{% endif %} > 
-				<a href="/whatwedo">What we do</a>
+				</li> -->
+			<!-- <li role="presentation" class={% if page.url == '/whatwedo/index.html' %}"active"{% endif %} > 
+			<a href="/whatwedo">What we do</a> -->
 			</li>
 			<li role="presentation" class={% if page.url == '/howwework/index.html' %}"active"{% endif %} >
 				<a href="/howwework">How we work</a>
