--- a/_includes/nav_links.html
+++ b/_includes/nav_links.html
@@ -20,7 +20,9 @@
 			<li role="presentation" class={% if page.url == '/blog/index.html' %}"active"{% endif %} >
 				<a href="/blog">Blog</a>
 			</li>
-
+			<li role="presentation" class={% if page.url == '/resume/index.html' %}"active"{% endif %} >
+				<a href="/resume">Resume</a>
+			</li>
 			<li role="presentation" class={% if page.url == '/contact/index.html' %}"active"{% endif %} >
 				<a href="/contact">Contact us</a>
 			</li>
