--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 	</script>
        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
        <link rel="stylesheet" href="/css/sticky-footer-navbar.css">
-       <script src="js/holder.js"></script>
+       <script src="/js/holder.js"></script>
 </head>
 <body style="padding-top: 50px;">
 	{% include nav_links.html %}
