--- a/_includes/nav_links.html
+++ b/_includes/nav_links.html
@@ -9,13 +9,16 @@
 				<a href="/">Who we are</a>
 				</li> -->
 			<!-- <li role="presentation" class={% if page.url == '/whatwedo/index.html' %}"active"{% endif %} > 
-			<a href="/whatwedo">What we do</a> -->
-			</li>
+			<a href="/whatwedo">What we do</a> 
+			</li> -->
 			<li role="presentation" class={% if page.url == '/howwework/index.html' %}"active"{% endif %} >
 				<a href="/howwework">How we work</a>
 			</li>
 			<li role="presentation" class={% if page.url == '/portfolio/index.html' %}"active"{% endif %} >
 				<a href="/portfolio">Portfolio</a>
+			</li>
+			<li role="presentation" class={% if page.url == '/customersay/index.html' %}"active"{% endif %} >
+				<a href="/customersay">Customers</a>
 			</li>
 			<li role="presentation" class={% if page.url == '/blog/index.html' %}"active"{% endif %} >
 				<a href="/blog">Blog</a>
