--- a/_includes/nav_links.html
+++ b/_includes/nav_links.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default navbar-fixed-top">
 <div class="container-fluid">
 	<div class="navbar-header">
-		<a class="navbar-brand" href="/">Yellow & Blue</a>
+		<a class="navbar-brand" href="/">SCH</a>
 	</div>
 	<div class="collapse navbar-collapse">
 		<ul class="nav nav-pills navbar-right">
