--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -8,17 +8,21 @@ layout: default
 
 <div class="row">
 
-    <div class="container-fluid col-md-3">
-        <div class="row">
-            {% for post in site.categories[category] %}
-            <div class="col-md-12"> 
-                <a href="{{ post.url }}">{{post.title}}</a>
+    <div class="container-fluid col-md-3" >
+        <div class="list-group">
+            {% for post in site.categories.portfolio %}
+            <div class="list-group-item"> 
+                <a href="{{ post.url }}">{{post.title}} <span class="badge">{{post.category}}</a>
             </div>
             {% endfor %}
         </div>
     </div>
     
     <div class="col-md-9">
-        {{ content }}
+        <div class="panel panel-success">
+            <div class="panel-body">
+                {{ content }}
+            </div>
+        </div>
     </div>
 </div>
