color for brand, order of port..

--- a/_includes/nav_links.html
+++ b/_includes/nav_links.html
@@ -1,7 +1,12 @@
 <nav class="navbar navbar-default navbar-fixed-top">
 <div class="container-fluid">
 	<div class="navbar-header">
-		<a class="navbar-brand" href="/">SCH</a>
+        <a class="navbar-brand" href="/">
+            <!-- Sang tao Chuyen nghiep Hoc hoi -->
+            <span style="color: blue">S</span>
+            <span style="color: orange">C</span>
+            <span style="color: red">H</span>
+        </a>
 	</div>
 	<div class="collapse navbar-collapse">
 		<ul class="nav nav-pills navbar-right">
