--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -10,7 +10,17 @@ layout: default
 
     <div class="container-fluid col-md-3" >
         <div class="list-group">
-            {% for post in site.categories.portfolio %}
+            {% for post in site.categories.mxwidget %}
+            <div class="list-group-item"> 
+                <a href="{{ post.url }}">{{post.title}} <span class="badge">{{post.category}}</a>
+            </div>
+            {% endfor %}
+            {% for post in site.categories.visualinteraction %}
+            <div class="list-group-item"> 
+                <a href="{{ post.url }}">{{post.title}} <span class="badge">{{post.category}}</a>
+            </div>
+            {% endfor %}
+            {% for post in site.categories.hybridmobileapp %}
             <div class="list-group-item"> 
                 <a href="{{ post.url }}">{{post.title}} <span class="badge">{{post.category}}</a>
             </div>
