--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,11 @@
 
     <div class="mdl-layout__header-row">
       <!-- Title -->
-      <span class="mdl-layout-title">{{ site.title }}</span>
+	<a href="/">
+	      <span class="mdl-layout-title" style="display: inline-block; color: blue">S</span>
+	      <span class="mdl-layout-title" style="display: inline-block; color: orange">C</span>
+	      <span class="mdl-layout-title" style="display: inline-block; color: red">H</span>
+	</a>
       <!-- Add spacer, to align navigation to the right -->
       <div class="mdl-layout-spacer"></div>
       
@@ -17,15 +21,6 @@
         </div>
       </div>
 
-      <button class="mdl-button mdl-js-button mdl-button--icon" id="menu-lower-left">
-        <i class="material-icons">more_vert</i>
-      </button>
-
-      <ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect" for="menu-lower-left">
-        {% for option in site.more_vert %}
-        <li><a href="{{ option[1].link }}" class="mdl-menu__item">{{ option[1].name }}</a></li>
-        {% endfor %}
-      </ul>
     </div>
   </header>
 
